--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.2"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "es6-promise": "^3.3.1",
+    "jquery": "^3.1.0",
+    "leaflet": "^0.7.7",
+    "leaflet.functionaltilelayer": "git://github.com/ismyrnow/Leaflet.functionaltilelayer.git#gh-pages"
   }
 }
