--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "lint": "eslint . || exit 0",
-    "start": "phonegap serve"
+    "start": "phonegap serve",
+    "build": "webpack www/js/index.js www/bundle.js"
   },
   "author": "Daniel Barreiro",
   "license": "MIT",
@@ -25,7 +26,8 @@
     "eslint": "^3.5.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2"
+    "eslint-plugin-react": "^6.2.2",
+    "webpack": "^1.13.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
